--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,8 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css"; // your theme
 
+.mat-sidenav-container, .mat-sidenav-content, .mat-tab-body-content {
+    transform: none !important;
+}
 .form{
   margin: 20px auto;
   max-width: 220px;
