--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 </div>
 <div *ngIf=message>{{message}}</div>
 
+<!-- <a [routerLink]="['/images']">Images</a> -->
 <div class="header-text"><span>Images</span></div>
 <div class="col-md-12" style='text-align: center;'>
   <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
