--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,21 @@
 body {
     background-color: #333
 }
+
+.header-container{
+    align-items: center;
+    padding: 24px 32px;
+    background-color: rgb(121, 121, 121);
+    top: 0;
+    width: calc(100% - 87px);
+    z-index: 1;
+}
+.header-text{
+    margin-left: 10px;
+    text-align: center;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 0px;
+    color: #FFF;
+    font-family: 'Roboto', sans-serif;
+}
