--- a/src/app/images/images.component.html
+++ b/src/app/images/images.component.html
@@ -1,4 +1,4 @@
-<div class="header-text"><span>Images</span></div>
-<div class="col-md-12" style='text-align: center;'>
+
+<div class="col-md-12" style='text-align: center; margin-top: 20px; height: 1000px'>
   <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
 </div>
