--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,29 @@
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport
+        [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+        [mode]="(isHandset$ | async) ? 'over' : 'side'"
+        [opened]="(isHandset$ | async) === false">
+      <mat-toolbar>Menu</mat-toolbar>
+      <mat-nav-list>
+        <a mat-list-item href="/">Home</a>
+        <a mat-list-item href="/images">Images</a>
+        <a mat-list-item href="/videos">Videos</a>
+        <a mat-list-item href="/upload">Upload</a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <mat-toolbar color="primary">
+        <button
+          type="button"
+          aria-label="Toggle sidenav"
+          mat-icon-button
+          (click)="drawer.toggle()"
+          *ngIf="isHandset$ | async">
+          <mat-icon aria-label="Side nav toggle icon">=</mat-icon>
+        </button>
+        <span>Wedding Gallery</span>
+      </mat-toolbar>
 
-
-<a [routerLink]="['/images']">Images</a>
-<br />
-<a [routerLink]="['/upload']">Upload</a>
-<br />
-<a [routerLink]="['/videos']">Videos</a>
-<br />
-
-<router-outlet></router-outlet>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
