--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-body {
-    background-color: #333
-}
-
 .header-container{
     align-items: center;
     padding: 24px 32px;
-    background-color: rgb(121, 121, 121);
     top: 0;
     width: calc(100% - 87px);
     z-index: 1;
@@ -17,6 +11,6 @@ body {
     font-size: 22px;
     line-height: 26px;
     letter-spacing: 0px;
-    color: #FFF;
+    color: #000;
     font-family: 'Roboto', sans-serif;
 }
