--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,11 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css"; // your theme
 
-.sidenav-container {
-    height: 100%;
-    margin: -8px;
-  }
-  
   .sidenav {
     width: 200px;
   }
   
   .sidenav .mat-toolbar {
-    background: inherit;
+    background: #fff;
   }
   
   .mat-toolbar.mat-primary {
@@ -18,4 +13,3 @@
     top: 0;
     z-index: 1;
   }
-  
