--- a/src/app/images/images.component.html
+++ b/src/app/images/images.component.html
@@ -1,4 +1,3 @@
-
-<div class="col-md-12" style='text-align: center; margin-top: 20px; height: 1000px'>
+<div class="content-container" style='text-align: center'>
   <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
 </div>
