--- a/src/app/images/images.component.scss
+++ b/src/app/images/images.component.scss
@@ -1,53 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css"; // your theme
 
-.mat-sidenav-container, .mat-sidenav-content, .mat-tab-body-content {
-    transform: none !important;
-}
-.form{
-  margin: 20px auto;
-  max-width: 220px;
-  border-radius: 5px;
-  background: #117A60;
-  border: 5px solid #117A60;
-}
-.form p{
-  width: 100%;
+.content-container {
   height: 100%;
-  text-align: center;
-  color: #fff;
-  font-family: Arial;
-  margin-top: 10px;
-  padding: 5px 10px 0 10px;
-  vertical-align: middle;
-  font-family: 'Roboto', sans-serif;
-  font-size: 20px; 
-  line-height: 1;
-}
-.form input{
-  position: absolute;
-  color: #0C5645;
-  margin: 0;
-  padding: 0;
-  outline: none;
-  opacity: 0;
-}
-.form button{
-  margin: 0;
-  color: #0C5645;
-  background: #16a085;
-  border: none;
-  width: 100%;
-  height: 35px;
-  margin: 0 auto;
-  border-radius: 6px;
-  border-bottom: 6px solid #117A60;
-  transition: all .2s ease;
-  outline: none;
-}
-.form button:hover {
-  background: #149174;
-        color: #0C5645;
-}
-form button:active{
-  border:0;
 }
