ng-bootstrap, new menu, new homepage

--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,3 +1,3 @@
-<mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile *ngFor="let item of videos; let i = index"><a href="{{ videos[i].url }}"><img src="{{ videos[i].thumbnailUrl }}"></a></mat-grid-tile>
-</mat-grid-list>
+<div *ngFor="let item of videos; let i = index">
+  <a href="{{ videos[i].url }}"><img src="{{ videos[i].thumbnailUrl }}"></a>
+</div>
