--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,25 @@
-<mat-nav-list>
-  <a mat-list-item href="/">Home</a>
-  <a mat-list-item href="/images">Images</a>
-  <a mat-list-item href="/videos">Videos</a>
-  <a mat-list-item href="/upload">Upload</a>
-</mat-nav-list>
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+  <a class="navbar-brand" [routerLink]="'.'">C & J Wedding</a>
+
+  <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
+  <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
+    &#9776;
+  </button>
+
+  <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'/'" (click)="isMenuCollapsed = true">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'/images'" (click)="isMenuCollapsed = true">Images</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'/videos'" (click)="isMenuCollapsed = true">Videos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'/upload'" (click)="isMenuCollapsed = true">Upload</a>
+      </li>
+    </ul>
+  </div>
+</nav>
