--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-navigation></app-navigation>
-<router-outlet></router-outlet>
+<body class="container pt-3 h-100">
+<router-outlet class="d-flex flex-column h-100"></router-outlet>
+</body>
+<app-footer class="mt-auto"></app-footer>
