--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,10 @@
 
-<div class="container-lg">
-<p>Thank you for coming to our wedding!</p>
-<p>We hope that you'll have a lot of fun, laugh a storm, shake a leg, and eat some cake!</p>
-<p>As humble homemakers, we ask that you supplement our video (or lack thereof) by uploading videos you've shot on the <a href="/upload">upload</a> page!</p>
-<p>Again, thanks for coming and checking out our website!</p>
-<p>Love,</p>
-<p>Mr. and Mrs. Jonas Schreiber :)</p>
-<br />
-<i class="fab fa-twitter twitter-awesome fa-4x"><a href="https://twitter.com/TSchreibers" target="blank"></a></i>
-<i class="fab fa-instagram ig-awesome fa-4x"><a href="https://www.instagram.com/the_schreibers/" target="blank"></a></i>
-</div>
+    <div class="container-lg">
+        <p>Thank you for coming to our wedding!</p>
+        <p>We hope that you'll have a lot of fun, laugh up a storm, shake a leg, and eat some cake!</p>
+        <p>As humble homemakers, we ask that you supplement our video (or lack thereof) through our <a href="/upload">upload</a> page!</p>
+        <p>Again, thanks for coming and checking out our website!</p>
+        <p>Love,</p>
+        <p>Mr. and Mrs. Jonas Schreiber :)</p>
+        <br />
+    </div>
