heights, alignments, color of upload button...

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,8 +5,8 @@
     <div class="container">
 
         <!-- Grid column -->
-        <div class="col-md-12 py-5">
-          <div class="mb-5 flex-center">
+        <div class="col-md-12 justify-content-center">
+          <div class="mb-5 flex-center justify-content-center">
 
             <!-- Twitter -->
             <a class="tw-ic" href="https://twitter.com/TSchreibers" target="_blank">
