--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-navigation></app-navigation>
-<body class="container pt-3 h-100">
-<router-outlet class="d-flex flex-column h-100"></router-outlet>
-</body>
+<router-outlet class="d-flex flex-column justify-content-center"></router-outlet>
 <app-footer class="mt-auto"></app-footer>
