--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,11 +8,29 @@
   }
   html, 
 body {
-    height: 80%;
+    height: 90vh;
     margin: 0;
-    min-height: 80%;
 }
-  
+@media (min-height: 850px) {
+  .content-container, app-upload {
+    height: 80%;
+    min-height: 80%;
+  }
+}
+
+@media (min-height: 550px) {
+  .content-container {
+    margin: 0 0 20px;
+  }
+}
+
+@media (min-height: 500px) {
+  app-upload, app-home {
+    display:block;
+    height: 80%;
+  }
+}
+
   .container {
     display: flex;
     flex-direction: row;
