z-index issues resolved. Remaining issue is when content is not filling vertical space on a smaller display, the footer doesn't rest at the bottom.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-
+<div class="d-flex flex-row">
     <div class="container-lg">
         <p>Thank you for coming to our wedding!</p>
         <p>We hope that you'll have a lot of fun, laugh up a storm, shake a leg, and eat some cake!</p>
@@ -7,4 +7,9 @@
         <p>Love,</p>
         <p>Mr. and Mrs. Jonas Schreiber :)</p>
         <br />
+        <br />
+        <br />
+        <br />
+        <br />
+    </div>
     </div>
