--- a/src/app/videos/videos.component.scss
+++ b/src/app/videos/videos.component.scss
@@ -3,3 +3,9 @@
     margin: 10px auto;
     text-align: center;
 }
+
+@media (max-width: 499px) {
+    .container-fluid {
+        height: 90%;
+    }
+  }
