--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-navigation></app-navigation>
 <router-outlet class="d-flex flex-column justify-content-center"></router-outlet>
-<app-footer class="mt-auto"></app-footer>
+<app-footer *ngIf="!hideFooter" class="mt-auto"></app-footer>
