--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,7 @@
         <p>We hope that you'll have a lot of fun, laugh up a storm, shake a leg, and eat some cake!</p>
         <p>As humble homemakers, we ask that you supplement our video (or lack thereof) through our <a href="/upload">upload</a> page!</p>
         <p>Again, thanks for coming and checking out our website!</p>
+        <p>If you couldn't be present but still want to see a livestream, please visit our <a href="/livestream">livestream</a> page!</p>
         <p>Love,</p>
         <p>Mr. and Mrs. Jonas Schreiber :)</p>
         <br />
