schedule and menu updates

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,34 +2,36 @@
     <div class="container-lg">
         <h2>Hors d’oeuvres</h2>
         <ul>
-            <li>Grilled Vegetable Quesadilla with Vegan Cheese <i>- v</i></li>
+            <li>Avocado and Vegetable Quesadilla with Vegan Cheese (Vegan)</li>
             <li>Beer Braised Beef Short Rib served on a Mini Potato Roll</li>
-            <li>Black Bean and Avocado Canapés <i>- v</i></li>
-            <li>Coconut Shrimp served with Sweet Chili Dipping Sauce</li>
-            <li>Homemade Macaroni and Cheese served in a Tortilla Cup</li>
+            <li>Black Bean and Avocado Canapés (Vegan)</li>
+            <li>Coconut Shrimp with Sweet Chili Dipping Sauce</li>
+            <li>Homemade Mac and Cheese served in a Tortilla Shell</li>
             <li>Smoked Salmon on Endive with Dill Sauce and Capers</li>
-            <li>Pepper Seared Tuna with Pickled Ginger and Wasabi Served on a Cucumber Round</li>
-            <li>White Bean and Caper Puree served on a Pita Crisp garnished with Roasted Pepper <i>- v</i></li>
-            <li>Roasted Beets and Goat Cheese served with a Balsamic Drizzle
-            <li>Chicken Satay with Peanut sauce</li>
+            <li>Pepper Seared Tuna, Pickled Ginger, Wasabi served on a Cuccumber Round</li>
+            <li>White Bean and Caper Puree served on Pita garnished with Roasted Pepper (Vegan)</li>
+            <li>Roasted Beets and Goat Cheese served with a Balsamic Drizzle</li>
+            <li>Chicken Satay with Peanut Sauce</li>
             <li>Fig Mascarpone in a Tartlet Shell with Honey Drizzle</li>
-            <li>Miniature Hamburger and Cheeseburger Sliders</li>
+            <li>Hamburger and Cheeseburger Sliders with Ketchup on the side</li>
+            <li>International Cheese Display: Brie Wheel, Smoked Gouda, Mild Vermont Cheddar, Aged Manchego, Wisconsin Munster & Cranberry Goat Cheese, Fresh Red Grapes, Seasonal Melon, Strawberries, Flatbreads and Crackers</li>
+            <li>Fresh Vegetable Crudités: Crisp Baby Carrots, Broccoli, Cauliflower, Celery, Red Bell Peppers, Yellow Squash, Sweet Grape Tomato served with Spinach, Blue Cheese and Roasted Pepper Ranch Dip</li>
         </ul>
 
         <h2>Dinner</h2>
         <ul>
-            <li>Roasted Top Round of Beef, Garlic and Rosemary Au Jus</li>
-            <li>Pan Seared Salmon with Fresh Lemon and Dill Sauce</li>
-            <li>Chicken Rosemarie with Sun Dried Tomato and Pesto Cream Sauce</li>
+            <li>Mixed Mesclun Greens: Julienne Carrots, Sliced Cuccumber, Bermuda Onion. Grape Tomato and Herb Croutons served with Raspberry Vinaigrette</li>
+            <li>Chicken Balsamic (served with mixed grilled vegetables)</li>
+            <li>Pan Seared Salmon with Lemon and Dill Buerre Blanc</li>
+            <li>Roasted Top Round of Beef with Garlic and Rosemary Au Jus</li>
         </ul>
 
         <h2>Accompaniments</h2>
         <ul>
-            <li>Mixed Mesclun Greens. Julienne of Carrot, Sliced Cucumber, Bermuda Onion, Grape Tomato and Herb Croutons served with Balsamic or Raspberry Vinaigrette <i>- v</i></li>
-            <li>Roasted Red Bliss and Sweet Potato <i>- v</i></li>
-            <li>Penne Pasta with Vodka Sauce <i>- v</i></li>
-            <li>Roasted Mixed Seasonal Vegetables <i>- v</i></li>
-            <li>Blended Wild Rice with Fresh Herbs <i>- v</i></li>
+            <li>Roasted Red Bliss and Sweet Potatoes</li>
+            <li>Penne Pasta with Vodka Sauce</li>
+            <li>Roasted Mixed Seasonal Vegetables</li>
+            <li>Blended Wild Rice with Fresh Herbs</li>
         </ul>
 
         <h2>Dessert</h2>
@@ -37,7 +39,7 @@
             <li>Wedding Cake</li>
             <li>Igloo Pops</li>
             <li>Fruit Kabobs</li>
-            <li>White Russian</li>
+            <li>White Russians</li>
             <li>Coffee</li>
         </ul>
     </div>
