--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,12 +1,14 @@
 <div class="d-flex flex-row">
     <div class="container-lg">
         <ul>
-            <li>5:00 Ceremony</li>
-            <li>5:30-6:30 Cocktail Hour</li>
-            <li>6:30-7:30 Grand Entrance, First Dance, Hora Dance</li>
-            <li>7:30-7:45 Toasts</li>
-            <li>7:45-8:45 Dinner</li>
-            <li>8:45 Cake and Dessert</li>
+            <li>4:30PM Arrival</li>
+            <li>5:00PM Wedding Ceremony</li>
+            <li>5:30PM Cocktail Hour</li>
+            <li>6:30PM Grand Introduction, Hora, Dancing</li>
+            <li>7:15PM Toast, by Kyle Tracey</li>
+            <li>7:30PM Dinner Buffet</li>
+            <li>8:50PM Cake Cutting</li>
+            <li>9:00PM Dessert</li>
         </ul>
     </div>
 </div>
