--- a/src/app/livestream/livestream.component.html
+++ b/src/app/livestream/livestream.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-row">
     <div class="container-lg">
-        <iframe src="https://www.youtube.com/embed/QKJ5awZNHhg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="424" height="240" src="https://www.youtube.com/embed/k-u4unHPUF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </div>
